--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^5.1.0
   sqflite: ^2.3.0
   path_provider: ^2.1.0
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
